traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: ';' expected but ')' found.
{left();if (!isFacingWall()) {test=true}); right()}; return(test)}
                                        ^